subindo post squad_log